Revert "Experimental: CI: Speed up build with ramdisk"
This reverts commit 358c5c706c486a034ea67e40aa92b86d10982db6.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build Kernel
         run: |
           docker run --rm -v ${PWD}:/project charcoal chown -R nobody /project
-          docker run --tmpfs /makepkg:exec,noatime,size=32G,mode=1777 --rm -v ${PWD}:/project charcoal sudo -u nobody makepkg -Ccf
+          docker run --rm -v ${PWD}:/project charcoal sudo -u nobody makepkg -Ccf
       - name: Upload Artifacts
         if: ${{ ! env.current_tag }}
         uses: actions/upload-artifact@v4
