Free up space in the runner
Signed-off-by: Thomas Rohloff <v10lator@myway.de>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,8 @@ jobs:
   build-kernel:
     runs-on: ubuntu-latest
     steps:
+      - name: Free up space
+        run: rm -rf /opt/hostedtoolcache
       - name: Checkout
         uses: actions/checkout@v4
         with:
