Build pull-requests
Signed-off-by: Thomas Rohloff <v10lator@myway.de>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,6 +3,8 @@ name: Build
 on:
   push:
     branches: ["master"]
+  pull_request:
+    types: [opened, reopened, edited]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,6 +21,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Get current tag
+        if: ${{ github.event_name == 'push' }}
         run: echo "current_tag=$(git describe --tags --abbrev=0 --exact-match 2>/dev/null || echo '')" >> $GITHUB_ENV
       - name: Get previous tag
         if: ${{ env.current_tag }}
