--- a/docker/makepkg.conf
+++ b/docker/makepkg.conf
@@ -22,7 +22,7 @@ LDFLAGS="-Wl,-O1 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now \
          -Wl,-z,pack-relative-relocs -Wl,--hash-style=gnu"
 
 BUILDENV=(!distcc !color !ccache !check !sign)
-OPTIONS=(strip !docs !libtool !staticlibs emptydirs !zipman purge !debug lto)
+OPTIONS=(strip !docs !libtool !staticlibs emptydirs !zipman purge !debug !lto)
 
 DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc} {usr{,/local}{,/share},opt/*}/{man,info})
 # vim: set ft=sh ts=2 sw=2 et:
