--- a/docker/pacman.conf
+++ b/docker/pacman.conf
@@ -3,6 +3,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 CheckSpace
 ParallelDownloads = 6
+DisableSandbox
 DownloadUser = alpm
 SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
