Experimental: Use full LTO
A free GitGub runner doesn't have enough RAM for this but it turns out there are two 70 GB partitions available and we probably use just one, so let's try to grab 16 GB of SWAP space from the other partition

Signed-off-by: Thomas Rohloff <v10lator@myway.de>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,6 +37,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build docker image
         run: docker build . -t charcoal
+      - name: Set up SWAP space
+        run: mkswap -s 16G -F /mnt/charcoal-swap.img && swapon /mnt/charcoal-swap.img
       - name: Build Kernel
         run: |
           docker run --rm -v ${PWD}:/project charcoal chown -R nobody /project
