Try to fix last commit
Signed-off-by: Thomas Rohloff <v10lator@myway.de>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,7 +38,11 @@ jobs:
       - name: Build docker image
         run: docker build . -t charcoal
       - name: Set up SWAP space
-        run: mkswap -s 16G -F /mnt/charcoal-swap.img && swapon /mnt/charcoal-swap.img
+        run: |
+          fallocate -l 16G /mnt/charcoal-swap.img
+          chmod 0600 /mnt/charcoal-swap.img
+          mkswap /mnt/charcoal-swap.img
+          swapon /mnt/charcoal-swap.img
       - name: Build Kernel
         run: |
           docker run --rm -v ${PWD}:/project charcoal chown -R nobody /project
